fixing bug where Elliot font was not showing up. Updated help page.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,7 +39,7 @@
 
 @font-face {
     font-family: "ElliotSix";
-    src: url("fonts/ElliotSix.ttf") format("truetype");
+    src: url("ElliotSix.ttf") format("truetype");
 }
 
 .headerBox{
@@ -167,5 +167,19 @@ img.button:hover {
     padding:60px;
     line-height:30px;
    	letter-spacing: -1px;
+}
+
+.help-text
+{
+	z-index:3;
+	position:absolute;
+	left:500;
+	top:300px;
+	color:black;
+    font-size:28px;
+    font-family:"ElliotSix";
+    padding:60px;
+    line-height:30px;
+   	letter-spacing: -1.5px;
 }
 
